--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+texarea {
+  resize: none;
+}
 
 img {
   display: block;
@@ -230,10 +233,7 @@ justify-content: space-between;
 .page-header {
   border-bottom: 1px solid #ececec;
 }
-.page-header a {
-    padding-top: 24px;
-      padding-bottom: 25px;
-}
+
 
 .container-header {
   display: flex;
@@ -368,8 +368,6 @@ justify-content: space-between;
   
   width: 528px;
   height: 581px;
-
-   
   background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -392,6 +390,9 @@ justify-content: space-between;
   cursor: pointer;
 }
 
+.button-close:focus .icon-close {
+  fill: var(--accent-color);
+}
 
 .section-hero {
  
@@ -730,26 +731,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
               1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-/* .portfolio-action {
-  position: relative;
-}
 
-.portfolio-thumb::after {
-  display: inline-block;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(-100%);
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
-}
-
-.portfolio-action:hover portfolio-thumb::after {
-  transform: translateY(0);
-} */
 
 .portfolio-action {
   position: relative;
@@ -781,9 +763,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--secondary-title-color);
 }
 
-.background-portfolio:hover .portfolio-thumb,
-.background-portfolio:focus .portfolio-thumb {
-  transform: translateY(0); }
+.link-card:hover .portfolio-thumb,
+.link-card:focus .portfolio-thumb {
+  transform: translateY(0);
+}
 
 
 
@@ -886,10 +869,359 @@ margin-right: 30px;
 
 }
 
-.join
-{
+.join {
+  
   margin-left: 105px;
+  margin-bottom: 0px;
+margin-left: auto;
+ }
+  
+
+.join-text {
+ 
+    display: block;
+      margin-top: 0;
+      margin-bottom: 20px;
+    font-weight: 700;
+      line-height: 1.14;
+      text-transform: uppercase;
+      color: var(--secondary-title-color);
+      
+    }
+
+
+.join-form {
+
+  display: flex;
+
+ margin-bottom: 0;
+ 
+
 }
-.join-title {
+ 
+
+.join-form input {
+
+width: 358px;
+  height: 50px;
+  
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--color-background-2);
+
+  padding-left: 16px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  
+      }
+
+
+.join-form input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+
+}
+
+.button-join {
+ position: relative;
+
+  margin-left: 12px;
+      width: 200px;
+      height: 50px;
+      
+      background: #2196F3;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      border-radius: 4px;
+      color: var(--secondary-title-color);
+     
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.88;
+      
+      letter-spacing: 0.06em;
+     
+      fill: var(--secondary-title-color);
+    
+      padding: 10px 62px 10px 28px;
+      
+     
+}
+
+.icon-send {
+  position: absolute;
+  top: 50%;
+  left: 148px;
+  transform: translateY(-50%);
+
+}
+
+ /* modal window */
+
+.modal-active {
+
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+  cursor: pointer;
+}
+.modal-title {
+  font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-text-color);
+    margin-bottom: 12px;
+}
+.form-field {
+  position: relative;
+margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17em;
+  letter-spacing: 0.01em;
+ 
+color: var(--primary-text-color);
+}
+
+.modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+ fill: var(--primary-title-text-color);
+ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.form-field input:focus+.modal-icon {
+  fill: var(--accent-color);
+}
+
+.form-field input {
+width: 100%;
+
+  padding: 14px 14px 14px 35px;
+  border: 1px solid var(--icon-border-color);
+  border-radius: 4px;
+  outline: none;
+  margin-bottom: 10px;
+  cursor: pointer;
+  margin-top: 4px;
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+
+
+.form-field input:focus {
+  border: 1px solid var(--accent-color);
+}
+
+
+
+.form-field input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  padding-left: 16px;
+
+}
+
+.form-field label {
+
+  font-weight: 400;
+    line-height: 1.16;
+   letter-spacing: 0.01;
+  color: var(--primary-text-color);
+}
+
+.form-field textarea {
+  width: 100%;
+  height: 120px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background: var(--secondary-title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 12px 16px;
+    resize: none;
+    margin-top: 4px;
+}
+
+
+.form-field textarea:focus {
+  border: 1px solid var(--accent-color);
+}
+
+
+.button-send {
+
+  width: 200px;
+  height: 50px;
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 124px;
+  margin-right: 124px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
   color: var(--secondary-title-color);
+
+
+}
+
+/*checkbox
+.checkbox-control {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+
+}
+
+.checkbox-label {
+  display: block;
+  padding-left: 12px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  cursor: pointer;
+}
+
+
+
+.checkbox-input {
+  position: absolute;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.checkbox-input:checked + .modal-icon {
+  border: none;
+  background-color: var(--accent-color);
+}
+
+
+
+
+/*.checkbox-control {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+
+}
+
+.checkbox-label {
+  display: block;
+  padding-left: 8px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  cursor: pointer;
+
+
+}
+
+.checkbox-input {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+
+.checkbox-input {
+  width: 16px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-border {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid rgba(33, 33, 33, 1);
+  border-radius: 2px;
+  background-color: var(--primary-white-color);
+  background-origin: border-box;
+  z-index: -1;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill-opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked+.checkbox-border {
+  border: none;
+  background-color: var(--accent-color);
+  fill: var(--primary-white-color)
+} */
+
+
+
+.checkbox-control {
+  display: flex;
+  flex-direction: inline-flex;
+  align-items: center;
+    justify-content: center;
+  margin-top: 16px;
+  margin-bottom: 30px;
+}
+
+
+.checkbox-input {
+appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: absolute;
+  
+}
+
+.icon-check {
+  display: inline-block;
+    width: 16px;
+      height: 15px;
+      border: 2px solid var(--primary-title-text-color);
+      border-radius: 4px;
+      margin-right: 8.38px;
+      background-color: var(--secondary-title-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.checkbox:checked + .icon-check {
+  background-color: var(--accent-color);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent-color);
+  fill: var(--secondary-title-color);
+}
+.checkbox-option {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+}
+a.form-contract {
+  margin-left: 4px;
+  color: var(--accent-color);
+  text-decoration: underline;
 }
