--- a/css/styles.css
+++ b/css/styles.css
@@ -890,16 +890,15 @@ width: 358px;
 }
 
 .button-join {
- position: relative;
-
-  margin-left: 12px;
-      width: 200px;
-      height: 50px;
+ display: flex;
+ align-items: center;
+ margin-left: 12px;
       
       background: #2196F3;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
       border-radius: 4px;
       color: var(--secondary-title-color);
+      
      
       font-weight: 700;
       font-size: 16px;
@@ -909,16 +908,16 @@ width: 358px;
      
       fill: var(--secondary-title-color);
     
-      padding: 10px 62px 10px 28px;
+      padding: 10px 28px 10px 28px;
+      justify-content: center;
       
      
 }
 
 .icon-send {
-  position: absolute;
-  top: 50%;
-  left: 148px;
-  transform: translateY(-50%);
+display:block;
+margin-left: 10px;
+
 
 }
 
@@ -981,7 +980,7 @@ color: var(--primary-text-color);
 .form-field input {
 width: 100%;
 
-  padding: 14px 14px 14px 35px;
+  padding: 11px 11px 11px 35px;
   border: 1px solid var(--icon-border-color);
   border-radius: 4px;
   outline: none;
@@ -1019,9 +1018,7 @@ width: 100%;
 border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   background: var(--secondary-title-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 12px 16px;
